--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ alembic = "^1.14.0"
 psycopg2-binary = "^2.9.10"
 pydantic-settings = "^2.6.1"
 python-multipart = "^0.0.17"
+pre-commit = "^4.0.1"
 
 
 [build-system]
