--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.8'
 
+networks:
+  kafka_network:
+    driver: bridge
+
 services:
   db:
     image: postgres:15.6
@@ -13,6 +17,9 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
+      start_period: 20s
+    networks:
+      - kafka_network
 
   migrator:
     build: .
@@ -23,6 +30,8 @@ services:
         condition: service_healthy
     env_file:
       - .env
+    networks:
+      - kafka_network
 
   web:
     build: .
@@ -38,6 +47,48 @@ services:
         condition: service_completed_successfully
     env_file:
       - .env
+    networks:
+      - kafka_network
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    networks:
+      - kafka_network
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - kafka_network
+
+  akhq:
+    image: tchiotludo/akhq
+    container_name: akhq
+    volumes:
+      - ./akhq.yml:/app/application.yml
+    ports:
+      - "8080:8080"
+    networks:
+      - kafka_network
+    depends_on:
+      - kafka
 
 volumes:
   postgres_data:
